--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flipclock/0.7.8/flipclock.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="vendors/animate/animateCss.css">
-    <link rel="stylesheet" href="scss/style.css">
+    <link rel="stylesheet" href="scss/style.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/4.13.0/bodymovin.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" crossorigin="anonymous"></script>
@@ -99,19 +99,19 @@
             <button class="btn btn-create-app fadeIn wow" data-wow-delay="2s">Create Now for FREE</button>
         </div>
         <div class="banner-container">
-            <!--<div class="banner-bg fadeIn wow" data-wow-delay="2s"></div>-->
-            <!--<div class="banner-bg banner-bg-rear banner-bg-2 wobble  wow" data-wow-delay="2.5s"></div>-->
-            <!--<div class="banner-bg banner-bg-rear banner-bg-3 wobble2 wow" data-wow-delay="2.5s"></div>-->
-            <!--<div class="banner-bg banner-bg-rear banner-bg-4 wobble3  wow" data-wow-delay="2.5s"></div>-->
-            <!--<div class="banner-bg banner-bg-rear banner-bg-5 wobble4  wow" data-wow-delay="2.5s"></div>-->
-            <img src="images/banner/banner-bg.png" class="banner-bg fadeIn wow" data-wow-delay="2s">
-            <img src="images/banner/banner-bg-2.png" class="banner-bg banner-bg-rear banner-bg-2 wobble  wow" data-wow-delay="2.5s">
-            <img src="images/banner/banner-bg-3.png" class="banner-bg banner-bg-rear banner-bg-3 wobble2 wow" data-wow-delay="2.5s">
-            <img src="images/banner/banner-bg-4.png" class="banner-bg banner-bg-rear banner-bg-4 wobble3  wow" data-wow-delay="2.5s">
-            <img src="images/banner/banner-bg-5.png" class="banner-bg banner-bg-rear banner-bg-5 wobble4  wow" data-wow-delay="2.5s">
+            <div class="banner-bg fadeIn wow" data-wow-delay="2s"></div>
+            <div class="banner-bg banner-bg-rear banner-bg-2 wobble  wow" data-wow-delay="2.5s"></div>
+            <div class="banner-bg banner-bg-rear banner-bg-3 wobble2 wow" data-wow-delay="2.5s"></div>
+            <div class="banner-bg banner-bg-rear banner-bg-4 wobble3  wow" data-wow-delay="2.5s"></div>
+            <div class="banner-bg banner-bg-rear banner-bg-5 wobble4  wow" data-wow-delay="2.5s"></div>
+            <!--<img src="images/banner/banner-bg.png" class="banner-bg fadeIn wow" data-wow-delay="2s">-->
+            <!--<img src="images/banner/banner-bg-2.png" class="banner-bg banner-bg-rear banner-bg-2 wobble  wow" data-wow-delay="2.5s">-->
+            <!--<img src="images/banner/banner-bg-3.png" class="banner-bg banner-bg-rear banner-bg-3 wobble2 wow" data-wow-delay="2.5s">-->
+            <!--<img src="images/banner/banner-bg-4.png" class="banner-bg banner-bg-rear banner-bg-4 wobble3  wow" data-wow-delay="2.5s">-->
+            <!--<img src="images/banner/banner-bg-5.png" class="banner-bg banner-bg-rear banner-bg-5 wobble4  wow" data-wow-delay="2.5s">-->
         </div>
     </div>
-    <script src="js/loader.js"></script>
+    <script src="js/loader.min.js"></script>
 </section>
 <section class="about-us">
     <div class="container">
